Version 4.3 - 26 May 2023
    - This is a maintenance release
    - Fixed pyqpp installation on Windows under MSVC
    - Migrated all continuous integration to GitHub actions

Version 4.2 - 13 May 2023
    - Quantum++ is now available on Homebrew (macOS/Linux), and can be
      installed with 'brew install quantum++'
    - New types in ["types.hpp"]
          realT   - floating point type, replaces 'double' in the source code
          ubigint - unsigned big integer, defined in terms of bigint as
                    using ubigint = std::make_unsigned<bigint>::type;
    - The fundamental types in ["types.hpp"] are now 'qpp::idx', 'qpp::bigint',
      and 'qpp::realT'. They can be changed at compile time (see below). All
      other types are dependent on those, please do not change.
    - Added support for changing the underlying index type via the CMake
      property TYPE_IDX. Choices are "default", "short", "int", "long",
      "long long", "unsigned short", "unsigned int", "unsigned long", and
      "unsigned long long". The "default" type is set in ["types.hpp"]. To
      change the underlying type with CMake, pass the variable "-DTYPE_IDX" to
      CMake, e.g., 'cmake -B build -DTYPE_IDX="unsigned long long"'.
    - Added support for changing the underlying big integer type via the CMake
      property TYPE_IDX. Choices are "default", "short", "int", "long",
      long long". The "default" type is set in ["types.hpp"]. To change the
      underlying type with CMake, pass the variable "-DTYPE_BIGINT" to CMake,
      e.g., 'cmake -B build -DTYPE_BIGINT="long long"'.
    - Added support for changing the underlying floating point type via the
      CMake property TYPE_FP. Choices are "default", "float", "double", and
      "long double". The "default" type is set in ["types.hpp"]. To change the
      underlying type with CMake, pass the variable "-DTYPE_FP" to CMake, e.g.,
      'cmake -B build -DTYPE_FP="long double"'.